--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "sending email through node js",
   "main": "app.js",
   "scripts": {
+    "start": "npm install && node app.js",
+    "build": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Subrat",
